--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SESSION_KEY=mysessionKey
 DATABASE_USERNAME=admin
 DATABASE_PASSWORD=admin1234
-DATABASE_NAME=zero
+DATABASE_NAME=zero3
 DATABASE_HOST=127.0.0.1
 ACCESS_TOKEN_KEY=myaccessToken
